# humetric

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  SECURITY.md  claude_desktop_config.json  docker-compose.dokploy.yml  docker-compose.prod.yml  docker-compose.yml  generate_openapi.py  local-run.md  mcp_server.py  monitor.py  pyproject.toml  report.json
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
docs/: api-reference.md  bulk-signal-plan.md  index.md  package.json  quickstart.md  rename-plan.md
humetric_test/: __init__.py  __main__.py  client.py  logger.py  runner.py
landing/: index.html
openapi-generator-config/: dotnet.yaml  java.yaml  php.yaml  python.yaml  typescript.yaml
packs/: lastik-bayi.yaml  lastik-bolge-sorumlusu.yaml  saha-hizmet-cari.yaml  saha-hizmet-isci.yaml
postman/: humetric-collection.json
prompts/: analyzer-findings.md  analyzer-system.md  curator-default.md  extractor-default.md  ranker-default.md  wizard-system.md
scripts/: backup.sh  benchmark.py  create_app_role.sql  seed.py
sdk-templates/: dotnet-README.md  java-README.md  php-README.md  python-README.md  typescript-README.md
tests/: conftest.py  test_api.py  test_api_v1.py  test_async.py  test_auth.py  test_base_agent.py  test_byo_key.py  test_consent.py  test_decay.py  test_embeddings.py  test_eval_idempotency.py  test_eval_rls_sensitive.py  test_kvkk.py  test_metering.py  test_models.py  test_pack_validation.py  test_packs.py  test_prompt_loading.py  test_ranker.py  (+5 more)
(+93 files in other folders)
