[project]
name = "humetric"
version = "1.0.0"
description = "Humetric External Platform — domain-agnostic entity metric engine"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.1",
    "anthropic>=0.40",
    "voyageai>=0.3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "stripe>=10.0",
    "mcp>=1.0",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "rich>=13.7",
    "asgi-lifespan>=2.1",
]

[project.scripts]
humetric-api = "humetric.api:main"
humetric-seed = "humetric.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humetric"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
